# nias

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements-ci.txt  requirements-docs.txt
.github/workflows/: publish-to-test-pypi.yml  publish.yml  run_tests.yml  tests.yml
demos/: eigs.py  gram_schmidt.py  svd.py
docs/: conf.py  developer_docs.md  index.md  math_concepts.md  notebook1.ipynb  substitutions.py
docs/_static/: custom.css
src/nias/: __init__.py  exceptions.py  interfaces.py
src/nias/algorithms/linalg/: __init__.py
src/nias/base/: linear_solvers.py  operators.py  vectorarray.py  vectorarrays.py
src/nias/bindings/nias_cpp/: interfaces.py  nias_cpp.py  product.py  vector.py  vectorarray.py
src/nias/bindings/numpy/: __init__.py  linear_solvers.py  operators.py  vectorarray.py  vectorarrays.py
src/nias/linalg/: eigs.py  gram_schmidt.py  svd.py
tests/: demos.py
